implementacion de nuevas secciones
se implementaron la seccion "un poco de historia" y "festivales"

--- a/Style.css
+++ b/Style.css
@@ -67,3 +67,9 @@ p{
 .tablaArtistas {
     border: solid;
 }
+.festivalNacionalDeLaChacarera{
+    display: flex;
+}
+.festivalNacionalDeLaChacarera p{
+    font-size: 35px;
+}
