--- a/Style.css
+++ b/Style.css
@@ -84,3 +84,39 @@ p{
 .error{
     border: 2px solid red;
 }
+
+.contenedorCarusel {
+    position: relative;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.btnAvanzar, .btnRetroceder {
+    position: absolute;
+    top: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 30px;
+    color: #fff;
+    background: rgba(0,0,0,0.5);
+    border-radius: 50%;
+    text-align: center;
+    line-height: 30px;
+    cursor: pointer;
+}
+
+.btnAvanzar {
+    right: 10px;
+    transform: translateY(-50%);
+}
+
+.btnRetroceder {
+    left: 10px;
+    transform: translateY(-50%);
+}
+
+#imagenCarusel {
+    width: 100%;
+    display: block;
+}
